--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -3,3 +3,6 @@
 # Create a default config file
 echo "Creating MongoDB data folder..."
 mkdir -p $SNAP_USER_DATA/mongo
+mkdir -p $SNAP_USER_DATA/log
+chmod -R 777 $SNAP_USER_DATA/mongo
+chmod -R 777 $SNAP_USER_DATA/log
